# JetsonPowerTesting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  constant_load.cu  main.cpp  strace.nano.txt
